@@ -48,8 +48,8 @@
     <color id="erase/rectangle out2"  rgba="0X0E0E0EFF"/>
     <color id="erase/rectangle in3"   rgba="0xf49a9a66"/>
     <color id="erase/rectangle out3"  rgba="0XFFFFFFFF"/>
-
     <color id="maze/wall color"       rgba="0x0000FFFF"/>
+    <color id="menu/text"             rgba="0xFFFFFFFF"/>
   </Skin>
 </GCompris>
 
