@@ -50,6 +50,8 @@
     <color id="erase/rectangle out3"  rgba="0XFFFFFFFF"/>
 
     <color id="maze/wall color"       rgba="0xFF00FFFF"/>
+    <color id="menu/text"             rgba="0xFF00FFFF"/>
+
   </Skin>
 </GCompris>
 
