@@ -47,5 +47,7 @@
     <color id="erase/rectangle out3"  rgba="0XFFFFFFFF"/>
 
     <color id="maze/wall color"       rgba="0xFFFFFFFF"/>
+    <color id="menu/text"             rgba="0xFFFF00FF"/>
+
   </Skin>
 </GCompris>
